<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    android:orientation="vertical"
    tools:context="com.shael.shah.expensemanager.activity.AddExpenseActivity">

    <LinearLayout
        android:id="@+id/toolbarLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <EditText
            android:id="@+id/amountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif"

            android:hint="$$$"
            android:inputType="numberDecimal"
            android:paddingBottom="10dp"

            android:paddingTop="10dp"
            android:textAlignment="viewEnd"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="Category" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/blueGrey" />

        <ScrollView
            android:id="@+id/categoryScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <LinearLayout
                android:id="@+id/scrollLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </ScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="Additional Info" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/blueGrey" />

        <LinearLayout
            android:id="@+id/dateLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/dateLabelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="sans-serif-smallcaps"
                android:text="Date"/>

            <EditText
                android:id="@+id/dateEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:focusable="false"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/locationLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/locationLabelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="sans-serif-smallcaps"
                android:text="Location"/>

            <EditText
                android:id="@+id/locationEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/noteLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/noteLabelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="sans-serif-smallcaps"
                android:text="Note"/>

            <EditText
                android:id="@+id/noteEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/paymentLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/paymentLabelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-smallcaps"
                android:text="Payment Method" />

            <Spinner
                android:id="@+id/paymentSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="center">
            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/recurringLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/recurringLabelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-smallcaps"
                android:text="Recurring Period" />

            <Spinner
                android:id="@+id/recurringSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="center">
            </Spinner>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
