<resources>
    <!-- App name -->
    <string name="app_name">Expense Manager</string>

    <!-- Navigation drawer related strings -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Date related strings -->
    <string name="date">Date</string>
    <string name="today">Today</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="all">All</string>

    <!-- Add/Update Expense Activity related strings -->
    <string name="currency">$%1$s</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <string name="add_expense">Add Expense</string>
    <string name="currencyHint">$$$</string>
    <string name="category">Category</string>
    <string name="additional_info">Additional Info</string>
    <string name="location">Location</string>
    <string name="note">Note</string>
    <string name="payment_method">Payment Method</string>
    <string name="recurring_period">Recurring Period</string>
    <string name="category_name">Category Name</string>
    <string name="add_category">Add Category</string>
    <string name="addCategory_ellipses">Add Category…</string>

    <!-- Display Expenses Activity related strings -->
    <string name="filter">Filter</string>
    <string name="sort_amount">Sort Amount</string>
    <string name="sort_location">Sort Location</string>

    <!-- Settings Activity related strings -->
    <string name="backup_data">Backup Data</string>
    <string name="restore_data">Restore Data</string>
    <string name="categories">Categories</string>
    <string name="backup_and_restore">Backup and Restore</string>
    <string name="reset">Reset</string>
    <string name="delete_all_data">Delete all Data</string>

    <!-- Fragment related strings -->
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="overview">Overview</string>
    <string name="add_income">Add Income</string>
    <string name="edit_categories">Edit Categories</string>
    <string name="category_color">Category Color</string>

</resources>
