<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    android:orientation="vertical"
    tools:context="com.shael.shah.expensemanager.MainActivity">

    <Toolbar
        android:id="@+id/mainActivityToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:elevation="4dp"
        android:minHeight="?android:attr/actionBarSize">
    </Toolbar>

    <TextView
        android:id="@+id/timePeriodTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:paddingTop="20dp"
        android:text="June"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/netTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_vertical"
        android:paddingBottom="30dp"
        android:paddingTop="10dp"
        android:text="$1734.90"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/incomeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center_vertical"
            android:text="$2734.90"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/expensesTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center_vertical"
            android:text="$1000.90"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="26sp" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragmentFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp" />

    <!--
    <fragment
        android:id="@+id/mainScrollViewFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        tools:layout="@layout/fragment_segments" />
    -->

    <!--
    <ScrollView
        android:id="@+id/mainCategoryScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <LinearLayout
            android:id="@+id/mainScrollLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp" />

    </ScrollView>
    -->

</LinearLayout>
