<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/addCategoryTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="createAddCategoryDialog"
        android:text="@string/addCategoryEllipses"
        android:textAlignment="textEnd"
        android:textStyle="italic" />

</LinearLayout>