<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <View
        android:id="@+id/colorView"
        android:layout_width="24dp"
        android:layout_height="24dp" />

    <RadioButton
        android:id="@+id/categoryRadioButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_gravity="end"
        android:layoutDirection="rtl"
        android:text="Sports"/>

</LinearLayout>